Adapted for Java 17 Updated to latest Checker Framework Fixed lots of checker errors by suppressing warnings. Fixed lots misplaced @NonNull and @Nullable annotations. Removed @UnderInitialization from ClearableTextField & Changed ClearableTextField constructor to factory method. FieldBinding now gets disabled color from LookAndFeel (UIDefaults) (Fix for Dark Mode) Replaced UIMenus.TextMenuOperation (interface) with Consumer<JTextComponent>