@@ -6,7 +6,7 @@
 
 	<groupId>com.neptunedreams</groupId>
 	<artifactId>tango</artifactId>
-	<version>2.0.20-SNAPSHOT</version>
+	<version>2.0.21-SNAPSHOT</version>
 	<name>Tango</name>
 	<packaging>jar</packaging>
 	
@@ -23,9 +23,9 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<!-- These properties will be set by the Maven Dependency plugin -->
 		<!--suppress UnresolvedMavenProperty -->
-		<annotatedJdk>${org.checkerframework:jdk8:jar}</annotatedJdk>
+<!--		<annotatedJdk>${org.checkerframework:jdk8:jar}</annotatedJdk>-->
 		<!--suppress UnresolvedMavenProperty -->
-		<errorProneJavac>${com.google.errorprone:javac:jar}</errorProneJavac>
+<!--		<errorProneJavac>${com.google.errorprone:javac:jar}</errorProneJavac>-->
 	</properties>
 
 	<dependencies>
@@ -52,19 +52,10 @@
 		<dependency>
 			<groupId>org.checkerframework</groupId>
 			<artifactId>checker-qual</artifactId>
-			<version>3.2.0</version>
+			<version>3.39.0</version>
 		</dependency>
 		<!-- If using JDK 8, add the following additional dependencies -->
-		<dependency>
-			<groupId>org.checkerframework</groupId>
-			<artifactId>jdk8</artifactId>
-			<version>3.2.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.errorprone</groupId>
-			<artifactId>javac</artifactId>
-			<version>9+181-r4173-1</version>
-		</dependency>
+
 
 		<!--Google guava-->
 		<dependency>
@@ -85,8 +76,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
 					<fork>true</fork>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>17</source>
+					<target>17</target>
 					<compilerArguments>
 						<Xmaxerrs>10000</Xmaxerrs>
 						<Xmaxwarns>10000</Xmaxwarns>
@@ -96,7 +87,7 @@
 						<path>
 							<groupId>org.checkerframework</groupId>
 							<artifactId>checker</artifactId>
-							<version>3.2.0</version>
+							<version>3.39.0</version>
 						</path>
 					</annotationProcessorPaths>
 					<annotationProcessors>
@@ -107,10 +98,10 @@
 						<annotationProcessor>org.checkerframework.checker.nullness.NullnessChecker</annotationProcessor>
 					</annotationProcessors>
 					<showWarnings>true</showWarnings>
-					<compilerArgs>
+					<compilerArgs combine.children="append">
 						<!-- If using JDK 8, use only the two arguments immediately below. -->
-						<arg>-J-Xbootclasspath/p:${errorProneJavac}</arg>
-						<arg>-Xbootclasspath/p:${annotatedJdk}</arg>
+<!--						<arg>-J-Xbootclasspath/p:${errorProneJavac}</arg>-->
+<!--						<arg>-Xbootclasspath/p:${annotatedJdk}</arg>-->
 						<!-- If using JDK 11, remove the two arguments above, remove the
 								 space in the one below, and uncomment it. -->
 						<!-- <arg>-J- -add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg> -->
@@ -118,8 +109,17 @@
 						<!-- Optionally, -Awarns turns type-checking errors into warnings. -->
 <!--						<arg>-Awarns</arg>-->
 						<arg>-Astubs=nullness-stub/</arg>
-						<!--<arg>-Astubs=checkerframework/stubs</arg> &lt;!&ndash; Suggested by https://github.com/typetools/checker-framework/issues/445 &ndash;&gt;-->
+<!--						<arg>-Astubs=checkerframework/stubs</arg> &lt;!&ndash; Suggested by https://github.com/typetools/checker-framework/issues/445 &ndash;&gt;-->
 						<arg>-AstubWarnIfNotFound</arg>
+							<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+							<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+							<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+							<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+							<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+							<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+							<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+							<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+							<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
 					</compilerArgs>
 				</configuration>
 				<version>3.8.1</version>
